[gd_scene load_steps=24 format=2]

[ext_resource path="res://Fonts/Nunito_regular16.font" type="BitmapFont" id=1]
[ext_resource path="res://Graphics/UI/PerformanceBg.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Conditions.gd" type="Script" id=3]
[ext_resource path="res://Scenes/ConditionButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://Graphics/UI/TopBar.png" type="Texture" id=5]
[ext_resource path="res://Fonts/Nunito_regular20.font" type="BitmapFont" id=6]
[ext_resource path="res://Fonts/Nunito_regular36.font" type="BitmapFont" id=7]
[ext_resource path="res://Graphics/UI/ConditionBg.png" type="Texture" id=8]
[ext_resource path="res://Graphics/UI/baseDataContainer 3.png" type="Texture" id=9]
[ext_resource path="res://Graphics/UI/baseDataContainer2.png" type="Texture" id=10]
[ext_resource path="res://Fonts/Nunito_extra_bold16.font" type="BitmapFont" id=11]
[ext_resource path="res://Graphics/UI/backNormal.png" type="Texture" id=12]
[ext_resource path="res://Graphics/UI/backPressed.png" type="Texture" id=13]
[ext_resource path="res://Graphics/UI/backHover.png" type="Texture" id=14]

[sub_resource type="StyleBoxFlat" id=1]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0.213287, 0.941406, 0.924341, 0.513843 )
draw_center = true
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0.8, 0.8, 0.8, 1 )
border_blend = false
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1
_sections_unfolded = [ "Anti Aliasing", "Border", "Border Width", "Corner Radius", "Expand Margin", "Shadow" ]

[sub_resource type="StyleBoxFlat" id=2]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0.213287, 0.941406, 0.924341, 0.513843 )
draw_center = true
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0.8, 0.8, 0.8, 1 )
border_blend = false
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 3
_sections_unfolded = [ "Anti Aliasing", "Corner Radius" ]

[sub_resource type="StyleBoxFlat" id=3]

content_margin_left = 2.0
content_margin_right = 2.0
content_margin_top = 0.0
content_margin_bottom = 0.0
bg_color = Color( 0.195312, 0.195312, 0.195312, 1 )
draw_center = true
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0.8, 0.8, 0.8, 1 )
border_blend = false
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1
_sections_unfolded = [ "Anti Aliasing", "Border Width", "Content Margin", "Corner Radius", "Expand Margin", "Resource", "Shadow" ]

[sub_resource type="Theme" id=4]

default_font = ExtResource( 1 )
HScrollBar/icons/decrement = null
HScrollBar/icons/decrement_highlight = null
HScrollBar/icons/increment = null
HScrollBar/icons/increment_highlight = null
HScrollBar/styles/grabber = SubResource( 1 )
HScrollBar/styles/grabber_highlight = SubResource( 2 )
HScrollBar/styles/grabber_pressed = null
HScrollBar/styles/scroll = null
HScrollBar/styles/scroll_focus = null
VScrollBar/icons/decrement = null
VScrollBar/icons/decrement_highlight = null
VScrollBar/icons/increment = null
VScrollBar/icons/increment_highlight = null
VScrollBar/styles/grabber = SubResource( 1 )
VScrollBar/styles/grabber_highlight = SubResource( 2 )
VScrollBar/styles/grabber_pressed = null
VScrollBar/styles/scroll = SubResource( 3 )
VScrollBar/styles/scroll_focus = null
_sections_unfolded = [ "HScrollBar", "HScrollBar/styles", "VScrollBar", "VScrollBar/styles" ]

[sub_resource type="StyleBoxEmpty" id=5]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="StyleBoxFlat" id=6]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0.148315, 0.778553, 0.84375, 0.287294 )
draw_center = true
border_width_left = 3
border_width_top = 3
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0.0142822, 0.892974, 0.914062, 0.502745 )
border_blend = true
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
corner_detail = 8
expand_margin_left = 5.0
expand_margin_right = 0.0
expand_margin_top = 5.0
expand_margin_bottom = 5.0
shadow_color = Color( 0.113281, 0.113281, 0.113281, 0.569059 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1
_sections_unfolded = [ "Anti Aliasing", "Border", "Border Width", "Content Margin", "Corner Radius", "Expand Margin", "Shadow" ]

[sub_resource type="StyleBoxFlat" id=7]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0.240509, 0.775537, 0.832031, 0.513804 )
draw_center = true
border_width_left = 3
border_width_top = 3
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0.0117647, 0.890196, 0.913725, 0.501961 )
border_blend = false
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1
_sections_unfolded = [ "Border", "Border Width", "Corner Radius" ]

[sub_resource type="StyleBoxFlat" id=8]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0.145098, 0.776471, 0.843137, 0.286275 )
draw_center = true
border_width_left = 3
border_width_top = 3
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0.0117647, 0.890196, 0.913725, 0.501961 )
border_blend = false
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1
_sections_unfolded = [ "Border", "Border Width", "Corner Radius" ]

[sub_resource type="StyleBoxEmpty" id=9]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[node name="Conditions" type="NinePatchRect"]

pause_mode = 2
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 1
theme = SubResource( 4 )
texture = ExtResource( 2 )
script = ExtResource( 3 )
_sections_unfolded = [ "Mouse", "Pause", "Theme", "Visibility" ]

[node name="ConditionsList" type="Control" parent="."]

editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="ScrollContainer" type="ScrollContainer" parent="ConditionsList"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 29.0
margin_top = 147.0
margin_right = -28.0
margin_bottom = -20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 1
scroll_horizontal = true
scroll_vertical = true
_sections_unfolded = [ "Margin", "Mouse", "Rect" ]

[node name="GridContainer" type="GridContainer" parent="ConditionsList/ScrollContainer"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1223.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 1
columns = 5
_sections_unfolded = [ "Anchor", "Margin", "Material", "Mouse", "Rect", "Size Flags", "Theme", "Visibility", "custom_constants" ]

[node name="Condition" parent="ConditionsList/ScrollContainer/GridContainer" instance=ExtResource( 4 )]

visible = false

[node name="TopBar" type="NinePatchRect" parent="ConditionsList"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_top = 36.0
margin_bottom = 132.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 5 )
patch_margin_left = 2
patch_margin_top = 22
patch_margin_right = 2
patch_margin_bottom = 22
_sections_unfolded = [ "Patch Margin" ]

[node name="LineEdit" type="LineEdit" parent="ConditionsList/TopBar"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 27.0
margin_top = 38.0
margin_right = 635.0
margin_bottom = 62.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/focus = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = ExtResource( 6 )
custom_colors/cursor_color = Color( 0.105469, 0.75, 0.75, 1 )
custom_colors/font_color = Color( 0, 1, 1, 1 )
expand_to_len = false
focus_mode = 2
placeholder_text = "Search..."
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
_sections_unfolded = [ "Placeholder", "custom_colors", "custom_constants", "custom_fonts", "custom_styles" ]

[node name="OptionButton" type="OptionButton" parent="ConditionsList/TopBar"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 981.0
margin_top = 35.0
margin_right = 1248.0
margin_bottom = 67.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/hover = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 0
selected = -1
items = [  ]
_sections_unfolded = [ "Theme", "custom_colors", "custom_constants", "custom_styles" ]

[node name="Label" type="Label" parent="ConditionsList/TopBar"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 886.0
margin_top = 40.0
margin_right = 970.0
margin_bottom = 61.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0, 1, 1, 0.709804 )
text = "Showing:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="Condition" type="NinePatchRect" parent="."]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 40.0
margin_bottom = -40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 5 )
patch_margin_left = 1
patch_margin_top = 22
patch_margin_right = 1
patch_margin_bottom = 22
_sections_unfolded = [ "Margin", "Material", "Patch Margin", "Visibility" ]

[node name="Label" type="Label" parent="Condition"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 81.0
margin_top = 50.0
margin_right = 504.0
margin_bottom = 87.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.157898, 0.777344, 0.777344, 0.712706 )
text = "Atrial Fibrillation"
clip_text = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="NinePatchRect" type="TextureRect" parent="Condition"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 50.0
margin_right = -26.0
margin_bottom = -45.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 8 )
stretch_mode = 0
_sections_unfolded = [ "Margin", "Patch Margin" ]

[node name="NinePatchRect" type="NinePatchRect" parent="Condition/NinePatchRect"]

self_modulate = Color( 0.386505, 0.554535, 0.582031, 0.33149 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 54.0
margin_top = 103.0
margin_right = 454.0
margin_bottom = 493.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 9 )
patch_margin_left = 40
patch_margin_top = 40
patch_margin_right = 40
patch_margin_bottom = 40
_sections_unfolded = [ "Patch Margin", "Rect", "Visibility" ]

[node name="Description" type="RichTextLabel" parent="Condition/NinePatchRect/NinePatchRect"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 18.0
margin_top = 18.0
margin_right = 377.0
margin_bottom = 344.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/focus = SubResource( 9 )
custom_fonts/normal_font = ExtResource( 1 )
custom_colors/default_color = Color( 0.0834961, 0.890625, 0.890625, 0.709804 )
bbcode_enabled = false
bbcode_text = "Second degree heart block occurs when some impulses fail to propogate to the ventricles. Second degree heart block is split into 'Mobitz Type I', 'Mobitz Type II' and '2:1/3:1' block. In Mobitz type I block there is progressive prolongation of the PR interval until eventually a wave of conduction fails to propogate to the ventricles. The PR interval returns to normal and the cycle begins again. In Mobitz type II the dropped QRS is not preceded by a prolongation in the PR interval. This can be a random drop or regular. If it is regular is can be expressed as a ratio, e.g. 2:1/3:1 block.

Second degree heart block occurs when some impulses fail to propogate to the ventricles. Second degree heart block is split into 'Mobitz Type I', 'Mobitz Type II' and '2:1/3:1' block. In Mobitz type I block there is progressive prolongation of the PR interval until eventually a wave of conduction fails to propogate to the ventricles. The PR interval returns to normal and the cycle begins again. In Mobitz type II the dropped QRS is not preceded by a prolongation in the PR interval. This can be a random drop or regular. If it is regular is can be expressed as a ratio, e.g. 2:1/3:1 block."
visible_characters = -1
percent_visible = 1.0
override_selected_font_color = false
_sections_unfolded = [ "BBCode", "Focus", "Rect", "custom_colors", "custom_constants", "custom_fonts", "custom_styles" ]

[node name="NinePatchRect2" type="NinePatchRect" parent="Condition/NinePatchRect"]

self_modulate = Color( 0.386505, 0.554535, 0.582031, 0.33149 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 509.0
margin_top = 49.0
margin_right = 1166.0
margin_bottom = 486.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 9 )
patch_margin_left = 40
patch_margin_top = 40
patch_margin_right = 40
patch_margin_bottom = 40
_sections_unfolded = [ "Patch Margin", "Visibility" ]

[node name="ClinFeat" type="NinePatchRect" parent="Condition/NinePatchRect/NinePatchRect2"]

self_modulate = Color( 0.234375, 0.234375, 0.234375, 0.386745 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 26.0
margin_top = 28.0
margin_right = 310.0
margin_bottom = 178.0
rect_min_size = Vector2( 0, 50 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 10 )
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20
_sections_unfolded = [ "Patch Margin", "Rect", "Visibility" ]

[node name="ClinFeat" type="RichTextLabel" parent="Condition/NinePatchRect/NinePatchRect2/ClinFeat"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 31.0
margin_right = -10.0
margin_bottom = -10.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/normal_font = ExtResource( 6 )
custom_colors/default_color = Color( 0.156863, 0.776471, 0.776471, 0.709804 )
bbcode_enabled = true
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
override_selected_font_color = false
_sections_unfolded = [ "BBCode", "Margin", "custom_colors", "custom_fonts" ]

[node name="Label2" type="Label" parent="Condition/NinePatchRect/NinePatchRect2/ClinFeat"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 6.0
margin_top = 5.0
margin_right = 276.0
margin_bottom = 26.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.157898, 0.777344, 0.777344, 0.712706 )
text = "Clinical Features"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="Investigations" type="NinePatchRect" parent="Condition/NinePatchRect/NinePatchRect2"]

self_modulate = Color( 0.234375, 0.234375, 0.234375, 0.386745 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 334.0
margin_top = 28.0
margin_right = 618.0
margin_bottom = 178.0
rect_min_size = Vector2( 0, 50 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 10 )
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20
_sections_unfolded = [ "Patch Margin", "Rect", "Visibility" ]

[node name="Ix" type="ScrollContainer" parent="Condition/NinePatchRect/NinePatchRect2/Investigations"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 33.0
margin_right = -10.0
margin_bottom = -10.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
scroll_horizontal = true
scroll_vertical = true
_sections_unfolded = [ "Margin", "Rect" ]

[node name="VBoxContainer" type="VBoxContainer" parent="Condition/NinePatchRect/NinePatchRect2/Investigations/Ix"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 264.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Size Flags" ]

[node name="Label2" type="Label" parent="Condition/NinePatchRect/NinePatchRect2/Investigations"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 9.0
margin_top = 5.0
margin_right = 265.0
margin_bottom = 26.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.157898, 0.777344, 0.777344, 0.712706 )
text = "Investigations"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="Management" type="NinePatchRect" parent="Condition/NinePatchRect/NinePatchRect2"]

self_modulate = Color( 0.234375, 0.234375, 0.234375, 0.386745 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 26.0
margin_top = 195.0
margin_right = 413.0
margin_bottom = 394.0
rect_min_size = Vector2( 0, 50 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 10 )
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20
_sections_unfolded = [ "Patch Margin", "Rect", "Visibility" ]

[node name="ClinFeat" type="RichTextLabel" parent="Condition/NinePatchRect/NinePatchRect2/Management"]

self_modulate = Color( 0.156863, 0.776471, 0.776471, 0.709804 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 33.0
margin_right = -10.0
margin_bottom = -10.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/bold_font = ExtResource( 11 )
bbcode_enabled = true
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
override_selected_font_color = false
_sections_unfolded = [ "BBCode", "Margin", "Visibility", "custom_fonts" ]

[node name="Label2" type="Label" parent="Condition/NinePatchRect/NinePatchRect2/Management"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 9.0
margin_top = 5.0
margin_right = 280.0
margin_bottom = 26.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.157898, 0.777344, 0.777344, 0.712706 )
text = "Management"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="Comps" type="NinePatchRect" parent="Condition/NinePatchRect/NinePatchRect2"]

self_modulate = Color( 0.234375, 0.234375, 0.234375, 0.386745 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 434.0
margin_top = 195.0
margin_right = 618.0
margin_bottom = 394.0
rect_min_size = Vector2( 0, 50 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 10 )
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20
_sections_unfolded = [ "Patch Margin", "Rect", "Visibility" ]

[node name="Comps" type="RichTextLabel" parent="Condition/NinePatchRect/NinePatchRect2/Comps"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 29.0
margin_right = -10.0
margin_bottom = -10.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/normal_font = ExtResource( 6 )
custom_colors/default_color = Color( 0.156863, 0.776471, 0.776471, 0.709804 )
bbcode_enabled = false
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
override_selected_font_color = false
_sections_unfolded = [ "Margin", "custom_colors", "custom_fonts" ]

[node name="Label2" type="Label" parent="Condition/NinePatchRect/NinePatchRect2/Comps"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 6.0
margin_top = 5.0
margin_right = 167.0
margin_bottom = 26.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.157898, 0.777344, 0.777344, 0.712706 )
text = "Complications"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="Back" type="TextureButton" parent="Condition"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 33.0
margin_top = 43.0
margin_right = 73.0
margin_bottom = 93.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 13 )
texture_hover = ExtResource( 14 )
_sections_unfolded = [ "Textures" ]


